# internal/oidc/dto.go
@@ -45,18 +45,23 @@ type IntrospectResponse struct {
 }
 
 type DiscoveryDocument struct {
-	Issuer                           string   `json:"issuer"`
-	AuthorizationEndpoint            string   `json:"authorization_endpoint"`
-	TokenEndpoint                    string   `json:"token_endpoint"`
-	UserinfoEndpoint                 string   `json:"userinfo_endpoint"`
-	RevocationEndpoint               string   `json:"revocation_endpoint"`
-	IntrospectionEndpoint            string   `json:"introspection_endpoint"`
-	JWKSUri                          string   `json:"jwks_uri"`
-	ResponseTypesSupported           []string `json:"response_types_supported"`
-	SubjectTypesSupported            []string `json:"subject_types_supported"`
-	IDTokenSigningAlgValuesSupported []string `json:"id_token_signing_alg_values_supported"`
-	ScopesSupported                  []string `json:"scopes_supported"`
-	TokenEndpointAuthMethodsSupported []string `json:"token_endpoint_auth_methods_supported"`
-	CodeChallengeMethodsSupported    []string `json:"code_challenge_methods_supported"`
-	GrantTypesSupported              []string `json:"grant_types_supported"`
+	Issuer                             string   `json:"issuer"`
+	AuthorizationEndpoint              string   `json:"authorization_endpoint"`
+	TokenEndpoint                      string   `json:"token_endpoint"`
+	UserinfoEndpoint                   string   `json:"userinfo_endpoint"`
+	RevocationEndpoint                 string   `json:"revocation_endpoint"`
+	IntrospectionEndpoint              string   `json:"introspection_endpoint"`
+	EndSessionEndpoint                 string   `json:"end_session_endpoint"`
+	JWKSUri                            string   `json:"jwks_uri"`
+	ResponseTypesSupported             []string `json:"response_types_supported"`
+	SubjectTypesSupported              []string `json:"subject_types_supported"`
+	IDTokenSigningAlgValuesSupported   []string `json:"id_token_signing_alg_values_supported"`
+	ScopesSupported                    []string `json:"scopes_supported"`
+	TokenEndpointAuthMethodsSupported  []string `json:"token_endpoint_auth_methods_supported"`
+	CodeChallengeMethodsSupported      []string `json:"code_challenge_methods_supported"`
+	GrantTypesSupported                []string `json:"grant_types_supported"`
+	FrontchannelLogoutSupported        bool     `json:"frontchannel_logout_supported"`
+	FrontchannelLogoutSessionSupported bool     `json:"frontchannel_logout_session_supported"`
+	BackchannelLogoutSupported         bool     `json:"backchannel_logout_supported"`
+	BackchannelLogoutSessionSupported  bool     `json:"backchannel_logout_session_supported"`
 }
